[project]
name = "thordata-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "mcp[cli]>=1.25.0",
    "playwright>=1.57.0",
    "selenium>=4.39.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.40.0",
]
